# small_memory_tree_memory_measurement

./: CMakeLists.txt  ProjectOptions.cmake  conanfile.py  conanfile.txt  main.cxx  main1024.cxx  main1048576.cxx  main128.cxx  main131072.cxx  main16.cxx  main16384.cxx  main2.cxx  main2048.cxx  main256.cxx  main262144.cxx  main32.cxx  main32768.cxx  main4.cxx  main4096.cxx  main512.cxx  main524288.cxx  main64.cxx  main65536.cxx  main8.cxx  main8192.cxx  massif.out.run_main1024  massif.out.run_main128  massif.out.run_main16  massif.out.run_main16384  massif.out.run_main2  massif.out.run_main2048  massif.out.run_main256  massif.out.run_main32  massif.out.run_main4  massif.out.run_main4096  massif.out.run_main512  massif.out.run_main64  massif.out.run_main8  massif.out.run_main8192  measure.sh  (+96 more)
.cache/clangd/index/: client.cxx.0203738DC195B697.idx  client.cxx.CA63AF46DC972598.idx  constant.hxx.AA65E4E471A39125.idx  gameTest.cxx.FA755A7620FDEE55.idx  main.cxx.A80B121D45A61EA4.idx  main.cxx.B99FCE83E6F97430.idx  main.cxx.E8CFAB12D530307A.idx  model.cxx.7AB5C9A91495BCC8.idx  model.hxx.E73048BC5380636E.idx  myShape.cxx.21DFC87A13E40EA9.idx  myShape.cxx.AE42F4B99BF2554A.idx  myShape.hxx.70B61963196BDEC6.idx  myShape.hxx.FA205F0A94F93C0B.idx  server.cxx.A8F65DA62804F520.idx  server.cxx.C9AA83A468E919B0.idx  server.hxx.473C789B7FA21CEC.idx  test.cxx.AC6CBA84F49071C0.idx  util.hxx.C57A37B551422FDC.idx  util.hxx.CF253CA3F0D87451.idx  webservice.cxx.88A0475848FC7BD9.idx  webservice.cxx.D20C380145CD7DCC.idx  webservice.hxx.0762F74B332E8259.idx  webservice.hxx.8893DDD63778FEE7.idx
cmake/: _FORTIFY_SOURCE.hpp
measure/root_with_n_children_uint8_t/result_small_memory_tree/: massif.out.small_memory_tree1024  massif.out.small_memory_tree128  massif.out.small_memory_tree16  massif.out.small_memory_tree16384  massif.out.small_memory_tree2  massif.out.small_memory_tree2048  massif.out.small_memory_tree256  massif.out.small_memory_tree32  massif.out.small_memory_tree32768  massif.out.small_memory_tree4  massif.out.small_memory_tree4096  massif.out.small_memory_tree512  massif.out.small_memory_tree64  massif.out.small_memory_tree8  massif.out.small_memory_tree8192
measure/root_with_n_children_uint8_t/result_stlplus_tree/: massif.out.stlplus_tree1024  massif.out.stlplus_tree128  massif.out.stlplus_tree16  massif.out.stlplus_tree16384  massif.out.stlplus_tree2  massif.out.stlplus_tree2048  massif.out.stlplus_tree256  massif.out.stlplus_tree32  massif.out.stlplus_tree32768  massif.out.stlplus_tree4  massif.out.stlplus_tree4096  massif.out.stlplus_tree512  massif.out.stlplus_tree64  massif.out.stlplus_tree8  massif.out.stlplus_tree8192
measure/root_with_n_children_uint8_t/small_memory_tree/: main1024.cxx  main128.cxx  main16.cxx  main16384.cxx  main2.cxx  main2048.cxx  main256.cxx  main32.cxx  main32768.cxx  main4.cxx  main4096.cxx  main512.cxx  main64.cxx  main8.cxx  main8192.cxx
measure/root_with_n_children_uint8_t/stlplus_tree/: main2.cxx  main256.cxx  main32768.cxx  main4.cxx  main512.cxx  main8.cxx
measure/tree_with_n_nodes_in_level_1_in_other_levels_only_one_node_uint8_t/result_small_memory_tree/: massif.out.small_memory_tree1024  massif.out.small_memory_tree128  massif.out.small_memory_tree16  massif.out.small_memory_tree16384  massif.out.small_memory_tree2  massif.out.small_memory_tree2048  massif.out.small_memory_tree256  massif.out.small_memory_tree32  massif.out.small_memory_tree32768  massif.out.small_memory_tree4  massif.out.small_memory_tree4096  massif.out.small_memory_tree512  massif.out.small_memory_tree64  massif.out.small_memory_tree8  massif.out.small_memory_tree8192
measure/tree_with_n_nodes_in_level_1_in_other_levels_only_one_node_uint8_t/result_stlplus_tree/: massif.out.stlplus_tree1024  (+14 more)
result_small_memory_tree/: massif.out.small_memory_tree1024  massif.out.small_memory_tree128  massif.out.small_memory_tree16  massif.out.small_memory_tree16384  massif.out.small_memory_tree2  massif.out.small_memory_tree2048  massif.out.small_memory_tree256  massif.out.small_memory_tree32  massif.out.small_memory_tree32768  massif.out.small_memory_tree4  massif.out.small_memory_tree4096  massif.out.small_memory_tree512  massif.out.small_memory_tree64  massif.out.small_memory_tree8  massif.out.small_memory_tree8192
result_stlplus_tree/: massif.out.stlplus_tree1024  massif.out.stlplus_tree128  massif.out.stlplus_tree16  massif.out.stlplus_tree16384  massif.out.stlplus_tree2  massif.out.stlplus_tree2048  massif.out.stlplus_tree256  massif.out.stlplus_tree32  massif.out.stlplus_tree32768  massif.out.stlplus_tree4  massif.out.stlplus_tree4096  massif.out.stlplus_tree512  massif.out.stlplus_tree64  massif.out.stlplus_tree8  massif.out.stlplus_tree8192
root_with_n_children_uint64_t/: massif.out.run_main1024  massif.out.run_main1048576  massif.out.run_main128  massif.out.run_main131072  massif.out.run_main16  massif.out.run_main16384  massif.out.run_main2  massif.out.run_main2048  massif.out.run_main256  massif.out.run_main262144  massif.out.run_main32  massif.out.run_main32768  massif.out.run_main4  massif.out.run_main4096  massif.out.run_main512  massif.out.run_main524288  massif.out.run_main64  massif.out.run_main65536  massif.out.run_main8  massif.out.run_main8192
root_with_n_children_uint8_t/: massif.out.run_main1024  massif.out.run_main1048576  massif.out.run_main128  massif.out.run_main131072  massif.out.run_main16  massif.out.run_main16384  massif.out.run_main2  massif.out.run_main2048  massif.out.run_main256  massif.out.run_main262144  massif.out.run_main32  massif.out.run_main32768  massif.out.run_main4  massif.out.run_main4096  massif.out.run_main512  massif.out.run_main524288  massif.out.run_main64  massif.out.run_main65536  massif.out.run_main8  massif.out.run_main8192
small_memory_tree/: main16384.cxx  main2.cxx  main2048.cxx  main4096.cxx  main64.cxx  main8.cxx
src/: CMakeLists.txt  hello.cxx  hello.hxx
stlplus_tree/: main1024.cxx  main128.cxx  main16.cxx  main16384.cxx  main2048.cxx  main32.cxx  main4096.cxx  main64.cxx  main8192.cxx
test/: CMakeLists.txt
(+30 files in other folders)
